[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hmac-tree = { path = "../hmac_tree" }
hmac-procs = { path = "../hmac_procs" }
quote = "*"
paste = "*"
syn = { version = "*", features = ["full"] }
proc-macro2 = "*"